--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -51,6 +51,16 @@
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent" />
 
+        <Button
+            android:id="@+id/btnNavigateToSpinningWheel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Spin Your Choice"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="16dp"
+            map:layout_constraintBottom_toBottomOf="parent"
+            map:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
