--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -55,10 +55,20 @@
             android:id="@+id/btnNavigateToSpinningWheel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Spin Your Choice"
             android:layout_marginLeft="16dp"
             android:layout_marginBottom="16dp"
+            android:text="Spin Your Choice"
             map:layout_constraintBottom_toBottomOf="parent"
+            map:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnNavigateToChoosePicture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:text="Search with Picture"
+            map:layout_constraintBottom_toTopOf="@+id/btnNavigateToSpinningWheel"
             map:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
