AddNewBillRecord form done
1. Form for adding a new bill done
2. Select contact from contact book done
3. After select will update recycler view
4. Added navigation from map to bill and from bill to map

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,9 +13,9 @@
         android:id="@+id/map_activity_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         map:headerLayout="@layout/header"
-        map:menu="@menu/main_menu"
-        android:layout_gravity="start">
+        map:menu="@menu/main_menu">
 
     </com.google.android.material.navigation.NavigationView>
 
