--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -35,15 +35,14 @@
             map:navigationIcon="@drawable/menu_icon" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvNoExistingRecord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bill"
-            map:layout_constraintTop_toTopOf="parent"
-            map:layout_constraintBottom_toBottomOf="parent"
+            android:text="NO EXISTING RECORD"
+            android:visibility="invisible"
             map:layout_constraintEnd_toEndOf="parent"
             map:layout_constraintStart_toStartOf="parent"
-            />
+            map:layout_constraintTop_toTopOf="@id/rvBillRecord" />
 
         <Button
             android:id="@+id/btnAddNewBillRecord"
@@ -53,6 +52,19 @@
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
             map:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvBillRecord"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="55dp"
+            map:layout_constraintBottom_toTopOf="@+id/btnAddNewBillRecord"
+            map:layout_constraintEnd_toEndOf="parent"
+            map:layout_constraintStart_toStartOf="parent"
+            map:layout_constraintTop_toBottomOf="@+id/bill_activity_toolbar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
