--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,15 +7,26 @@
             android:id="@+id/nav_map"
             android:icon="@drawable/map_icon"/>
 
-        <item
-            android:title="Split Bill"
-            android:id="@+id/nav_bill"
-            android:icon="@drawable/bill_icon"/>
     </group>
+
+    <item android:title="Bill">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:title="Bill Record"
+                    android:id="@+id/nav_bill"
+                    android:icon="@drawable/bill_icon"/>
+
+                <item
+                    android:title="Debt Record"
+                    android:id="@+id/nav_debt_record"
+                    android:icon="@drawable/logout_icon"/>
+            </group>
+        </menu>
+    </item>
 
 
         <item android:title="Profile">
-
             <menu>
                 <group android:checkableBehavior="single">
                     <item
