--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -14,6 +14,7 @@
         app:srcCompat="@drawable/profile_icon" />
 
     <TextView
+        android:id="@+id/tvHeaderProfileName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profile"
