--- a/app/src/main/res/drawable/my_border.xml
+++ b/app/src/main/res/drawable/my_border.xml
@@ -4,18 +4,18 @@
 
     <!-- View background color -->
     <solid
-        android:color="@color/white" >
+        android:color="@color/lotion">
     </solid>
 
     <!-- View border color and width -->
     <stroke
-        android:width="2dp"
+        android:width="0.2dp"
         android:color="@color/black" >
     </stroke>
 
     <!-- The radius makes the corners rounded -->
     <corners
-        android:radius="2dp"   >
+        android:radius="10dp"   >
     </corners>
 
 </shape>
