--- a/app/src/main/res/layout/activity_view_restaurant_profile.xml
+++ b/app/src/main/res/layout/activity_view_restaurant_profile.xml
@@ -7,91 +7,136 @@
     tools:context=".ViewRestaurantProfile">
 
     <ImageView
+        android:id="@+id/ivBackPress"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back" />
+
+    <View
+        android:id="@+id/viewToolBarLine"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@+id/ivBackPress"/>
+
+    <ImageView
         android:id="@+id/ivRestaurantPicture"
         android:layout_width="match_parent"
         android:layout_height="192dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivBackPress"
         app:srcCompat="@android:drawable/ic_menu_report_image" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout4"
+    <TextView
+        android:id="@+id/tvRestaurantNameContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/ivRestaurantPicture">>
+        android:text="NameContent"
+        android:textColor="@color/black"
+        android:textSize="23dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivRestaurantPicture" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout1"
+    <LinearLayout
+        android:id="@+id/linearLayout9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvRestaurantNameContent">
+
+        <TextView
+            android:id="@+id/tvTypeOfCuisine_viewRestaurant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="TypeOfCuisine" />
+        <TextView
+            android:id="@+id/tvDistance_viewRestaurant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tvRestaurantNameTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Restaurant Name" />
-
-            <TextView
-                android:id="@+id/tvRestaurantNameContent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="NameContent"
-                android:textColor="@color/black"
-                android:textSize="17dp" />
-        </LinearLayout>
-
+            android:text="Distance" />
     </LinearLayout>
+
+    <View
+        android:id="@+id/viewNameLine"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"/>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="16dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        app:layout_constraintTop_toBottomOf="@+id/viewNameLine">
 
         <TextView
             android:id="@+id/tvAddressTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Date" />
+            android:text="Address" />
 
         <TextView
             android:id="@+id/tvAddressContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="DateContent"
+            android:text="AddressContent"
             android:textColor="@color/black"
             android:textSize="17dp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
+    <View
+        android:id="@+id/viewLine"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
+
+    <TextView
+        android:id="@+id/tvRatingTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="16dp"
-        android:orientation="vertical"
+        android:text="Ratings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-        <TextView
-            android:id="@+id/tvRatingTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Ratings" />
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/viewLine"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,7 +147,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+        app:layout_constraintTop_toBottomOf="@+id/tvRatingTitle">
 
         <LinearLayout
             android:id="@+id/linearLayout5"
@@ -125,6 +170,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:theme="@style/RatingBar"
                 android:numStars="5"
                 android:stepSize="0.1"/>
 
@@ -260,7 +306,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:gravity="center"
-                    android:text="4" />
+                    android:text="1" />
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
                     android:id="@+id/lpiOneStar"
@@ -283,6 +329,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_button"
+        android:textColor="@color/black"
         android:text="Rate This Restaurant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
