--- a/app/src/main/res/layout/rate_restaurant_popup_layout.xml
+++ b/app/src/main/res/layout/rate_restaurant_popup_layout.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/ratingBarRestaurantRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:theme="@style/RatingBar"
                 android:stepSize="1.0"
                 android:numStars="5"
                 android:layout_marginTop="16dp"/>
@@ -37,6 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_button"
+                android:textColor="@color/black"
                 android:text="Submit"
                 android:layout_marginTop="16dp"/>
 
