--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,11 @@
     <color name="red">#FF7373</color>
     <color name="gray">#D5D4D4</color>
     <color name="darkerGray">#9E9E9E</color>
-
-
+    <color name="deepChampagne">#F0D39C</color>
+    <color name="brightGray">#EFEFEF</color>
+    <color name="palePink">#F7D7D7</color>
+    <color name="seashell">#FCF3F0</color>
+    <color name="magnolia">#F3F3FC</color>
+    <color name="lavender">#E9E1F9</color>
+    <color name="lotion">#FAFCFB</color>
 </resources>
